syntax = "proto3";

option go_package = "github.com/hatena/Hatena-Intern-2020/pb/go/title_fetcher"; // fake
package title_fetcher;

service TitleFetcher {
  rpc Fetch(FetchRequest) returns (FetchReply);
}

// render

message FetchRequest {
  string url = 1;
}

message FetchReply {
  string title = 1;
}
